--- a/jupyter/trabalho-etapa2.ipynb
+++ b/jupyter/trabalho-etapa2.ipynb
@@ -212,7 +212,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3e43bc76-4900-4863-a2fa-a9e5c78cffb4",
+       "model_id": "d2364af5-c510-4d89-9b67-331ce4e086bb",
        "version_major": 2,
        "version_minor": 0
       },
@@ -230,26 +230,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
    "outputs": [
     {
      "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1917fc7b-03ff-4d61-9308-443bc9ecb7ee",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "method": "display_data"
+      "text/plain": [
+       "683"
+      ]
      },
+     "execution_count": 6,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "SELECT * FROM Sample;"
+    "SELECT COUNT(*)\n",
+    "FROM Sample;"
    ]
   },
   {
