--- a/jupyter/trabalho-etapa04.ipynb
+++ b/jupyter/trabalho-etapa04.ipynb
@@ -45,7 +45,7 @@
     "```\n",
     "\n",
     "## Modelo Lógico RDF\n",
-    "\n",
+    "![](modeloLogicoRDF.png)\n",
     "## Consultas em sparql\n",
     "\n",
     "### Usando Mesh"
